<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cartesian_admittance_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="thibault.poignonec@gmail.com">tpoignonec</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>backward_ros</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>kinematics_interface</depend>
  <depend>filters</depend>
  <depend>generate_parameter_library</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_kdl</depend>
  <depend>tf2_ros</depend>
  <depend>trajectory_msgs</depend>

  <depend>cartesian_control_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>kinematics_interface_kdl</test_depend>
  <test_depend>hardware_interface_testing</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
