<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cartesian_velocity_controller</name>
  <version>0.0.0</version>
  <description>Cartesian velocity controller package for ros2_control</description>
  <maintainer email="mcbed.robotics@gmail.com">Maciej Bednarczyk</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>kinematics_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>generate_parameter_library</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>hardware_interface_testing</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>
  <test_depend>kinematics_interface_kdl</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
